changed truck icons

--- a/pages/manager.html
+++ b/pages/manager.html
@@ -181,7 +181,7 @@
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
-                                        <i class="fa fa-truck fa-5x"></i>
+                                        <img src="../css/truck.png" style="height:70px;"/>
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge">5/16</div>
@@ -357,7 +357,7 @@
                     <div class="col-lg-6">
                       <div class="panel panel-default">
                           <div class="panel-heading">
-                              <i class="fa fa-bar-chart-o fa-fw"></i> Map
+                              <i class="fa fa-bar-chart-o fa-fw"></i> Map </div><div class="panel-body" style="padding:0px">
                               <div id="minecontainer">
                       <div id="minemap" style="height: 600px;"></div>
                       <div style="white-space: nowrap; text-align: center; padding: 6px 0;">
