--- a/pages/truck.html
+++ b/pages/truck.html
@@ -63,61 +63,7 @@
                 </ul>
 
                 <ul class="nav navbar-right navbar-top-links">
-                    <li class="dropdown navbar-inverse">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-bell fa-fw"></i> <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu dropdown-alerts">
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-comment fa-fw"></i> Occupied Trucks
-                                        <span class="pull-right text-muted small">4 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                        <span class="pull-right text-muted small">12 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                        <span class="pull-right text-muted small">4 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-tasks fa-fw"></i> New Task
-                                        <span class="pull-right text-muted small">4 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                        <span class="pull-right text-muted small">4 minutes ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a class="text-center" href="#">
-                                    <strong>See All Alerts</strong>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
+                                        <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <i class="fa fa-user fa-fw"></i> Silver Goldberg <b class="caret"></b>
                         </a>
@@ -180,9 +126,10 @@
                             <div class="panel-heading">
                                 <div class="row">
                                     <div class="col-xs-3">
-                                        <i class="fa fa-truck fa-5x"></i>
+                                      <img src="../css/digger.png" style="height:70px; position:absolute; left:0px"/>
                                     </div>
                                     <div class="col-xs-9 text-right">
+
                                         <div class="huge">LDR401</div>
                                         <div>Allocated Loader</div>
                                     </div>
@@ -357,7 +304,7 @@
 
                                                                                           <div class="panel panel-default">
                           <div class="panel-heading">
-                              <i class="fa fa-bar-chart-o fa-fw"></i> Map
+                              <i class="fa fa-bar-chart-o fa-fw"></i> Map </div><div class="panel-body" style="padding:0px">
                               <div id="minecontainer">
 <div id="minemap" style="height: 600px;"></div>
    <div style="white-space: nowrap; text-align: center; padding: 6px 0;">
