--- a/pages/manager.html
+++ b/pages/manager.html
@@ -320,14 +320,16 @@
                                        </div>
                                        <div class="timeline-panel">
                                            <div class="timeline-heading">
-                                               <h4 class="timeline-title">Truck TRH405 recorded an accident</h4>
+                                               <h4 class="timeline-title">Truck TRH405 recorded an incident</h4>
                                                <p>
                                                    <small class="text-muted"><i class="fa fa-clock-o"></i> 9 minutes ago
                                                    </small>
                                                </p>
                                            </div>
                                            <div class="timeline-body">
-                                               <p>Estimated delay: 20min</p>
+
+                                               <p>Dozer on ramp<br>
+                                                 Estimated delay: 5min</p>
                                            </div>
                                        </div>
                                    </li>
